fix margin popup__title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h2 class="post__title"></h2>
           <p class="post__text"></p>
         </section>
-        <h2 class="popup__title">Комментарии:</h2>
+        <h2 class="popup__view-title">Комментарии:</h2>
         <section class="comments"></section>
       </div>
     </div>
